--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@ffmpeg/core": "^0.11.0",
     "@ffmpeg/ffmpeg": "^0.11.5",
     "@types/uuid": "^8.3.4",
+    "@types/video.js": "^7.3.49",
+    "@videojs/themes": "^1.0.1",
     "ngx-mask": "^13.1.14",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
+    "video.js": "^7.20.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
